# audio-transcript

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml  release.yml
scripts/: download_model.sh
src/audio_transcript/: diarized_transcripts.py  format_transcript.py  models.py  pipeline.py  present_transcript.py  process_rttm_data.py  speaker_diarization.py  split_audio.py  utils.py  yt_audio_downloader.py
tests/: test_format_transcript.py
